More of the compiler is done.