@@ -1,25 +1,22 @@
-import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Collections;
 public class WolfSample {
 
-    public static Integer sumList(ArrayDeque<Integer> l) {
+    public static Integer sumList(ArrayList<Integer> l) {
         if (l.size() == 0) {
             return 0;
         } else {
-            ArrayDeque<Integer> tail1 = l.clone();
-            tail1.removeFirst();
-            return l.getFirst() + sumList(tail1);
+            ArrayList<Integer> tail1 = new ArrayList<>(l.subList(1, l.size()));
+            return l.get(0) + sumList(tail1);
         }
     }
     
-    public static Integer prodList(ArrayDeque<Integer> argParty) {
+    public static Integer prodList(ArrayList<Integer> argParty) {
         if (argParty.size() == 0) {
             return 1;
         } else {
-            ArrayDeque<Integer> tail1 = argParty.clone();
-            tail1.removeFirst();
-            return argParty.getFirst() * prodList(tail1);
+            ArrayList<Integer> tail1 = new ArrayList<>(argParty.subList(1, argParty.size()));
+            return argParty.get(0) * prodList(tail1);
         }
     }
  
@@ -32,19 +29,20 @@ public class WolfSample {
      * @param args the command line arguments
      */
     public static void main(String[] args) {
-        ArrayDeque<Integer> list1 = new ArrayDeque<>();
+        ArrayList<Integer> list1 = new ArrayList<>();
         list1.add(1);
         list1.add(2);
         list1.add(3);
-        ArrayDeque<Integer> list2 = new ArrayDeque<>();
+        Collections.reverse(list1);
+        ArrayList<Integer> list2 = new ArrayList<>();
         list2.add(5);
         list2.add(7);
         list2.add(2);
-        ArrayDeque<Integer> list3 = new ArrayDeque<>();
+        ArrayList<Integer> list3 = new ArrayList<>();
         list3.add(0);
         list3.add(127);
         list3.add(9);
-        ArrayDeque<Integer> arg1 = new ArrayDeque<>();
+        ArrayList<Integer> arg1 = new ArrayList<>();
         arg1.add(prodList(list1));
         arg1.add(prodList(list2));
         arg1.add(prodList(list3));
